--- a/package.json
+++ b/package.json
@@ -12,6 +12,12 @@
     "lint:vue:fix": "vue-cli-service lint --fix",
     "lint:css": "stylelint src/**/*.{css,scss,vue}",
     "lint": "npm run lint:vue && npm run lint:css",
+    "ssr:build": "vue-cli-service ssr:build",
+    "ssr:fix": "vue-cli-service ssr:fix",
+    "ssr:fix-vuex": "vue-cli-service ssr:fix-vuex",
+    "ssr:serve": "vue-cli-service ssr:serve",
+    "ssr:start": "vue-cli-service ssr:start",
+    "ssr:static": "vue-cli-service ssr:static",
     "test": "npm run lint && npm run test:unit",
     "test:withe2e": "npm run lint && npm run test:unit && npm run test:e2e -- --headless"
   },
@@ -20,12 +26,15 @@
     "@aeternity/aepp-sdk": "^7.7.0",
     "@dicebear/avatars": "^4.5.2",
     "@dicebear/avatars-avataaars-sprites": "^4.5.2",
+    "@uvue/core": "^0.1.7",
+    "@uvue/server": "^0.1.7",
     "aeternity-fungible-token": "github:aeternity/aeternity-fungible-token#v1.0.0",
     "autosize": "^4.0.2",
     "axios": "^0.21.1",
     "bignumber.js": "^9.0.1",
     "bootstrap": "^4.5.3",
     "chart.js": "^2.9.4",
+    "connect": "^3.7.0",
     "core-js": "^3.8.1",
     "date-fns": "^2.16.1",
     "fontsource-ibm-plex-sans": "^3.1.5",
@@ -34,6 +43,7 @@
     "jdenticon": "^2.2.0",
     "jitsi-iframe-api": "^1.0.0",
     "lodash-es": "^4.17.20",
+    "serve-static": "^1.14.1",
     "sophia-bonding-curve": "github:aeternity/BondingCurve#1.0.0-alpha",
     "soundcloud-widget": "^0.2.1",
     "tipping-contract": "github:aeternity/tipping-contract#v3.0.0-alpha1",
@@ -48,6 +58,7 @@
     "wordbazaar-contracts": "github:aeternity/wordbazaar-contracts#v0.0.3-alpha2"
   },
   "devDependencies": {
+    "@uvue/vue-cli-plugin-ssr": "~0.1.7",
     "@vue/cli-plugin-babel": "~4.2.0",
     "@vue/cli-plugin-e2e-cypress": "~4.2.0",
     "@vue/cli-plugin-eslint": "~4.2.0",
