--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "jdenticon": "^2.2.0",
     "jitsi-iframe-api": "^1.0.0",
     "lodash-es": "^4.17.20",
+    "node-fetch": "^2.6.1",
     "serve-static": "^1.14.1",
     "sophia-bonding-curve": "github:aeternity/BondingCurve#1.0.0-alpha",
     "soundcloud-widget": "^0.2.1",
